--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,7 +8,7 @@ body {
   }
 
 .container {
-    height: 100%;
+    height: 100vh;
     text-align: center;
     align-items: center;
     justify-content: center;
