added auto mobile keyboard dismissal, and fixed issue with hint scrolling off page.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,10 +25,13 @@ body {
     font-size: 70px;
     margin: 0;
 }
+.output {
+    overflow-y: auto;
+    text-align: center;
+}
 
 .password-field, .submit {
     background-color: black;
-    /* border: 10px; */
     border-color:white;
 }
 
@@ -37,19 +40,11 @@ body {
 }
 
 .side-by-side {
-    /* margin: auto; */
     display: flex; 
-    /* grid-template-columns: 1fr 1fr;  */
     grid-gap: 20px; 
-    /* border: 1px solid black;  */
-    /* width: 34;  */
-
 }
 
 .side1, .side2{
-    /* margin: 10px;  */
-    /* border-bottom: 1; */
-    /* size */
     width: 95%;
     text-align: left;
 }
