--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,5 @@
 body {
+    height: 100vh;
     background-color: black
 }
 
@@ -9,7 +10,7 @@ body {
 
 .container {
     display: grid;
-    height: 100%;
+    /* height: 100%; */
     text-align: center;
     align-items: center;
     justify-content: center;
